analysis/low-level-api-fir/testData/lazyResolve/errors/contextParameterOnErrorPrimaryConstructor.kt
// MEMBER_CLASS_FILTER: org.jetbrains.kotlin.fir.symbols.impl.FirConstructorSymbol
annotation class Anno

class Cl<caret>azz
@Anno("str")
context(c:Clazz){}